[gd_scene load_steps=5 format=3 uid="uid://8axewicbs5uk"]

[ext_resource type="Script" path="res://menu.gd" id="1_4hy44"]
[ext_resource type="FontFile" uid="uid://b85uj6o4265l" path="res://font/Cretino.otf" id="1_ouk20"]
[ext_resource type="Texture2D" uid="uid://d1o3ivjdhwlm4" path="res://image/icon.png" id="2_mae5d"]
[ext_resource type="AudioStream" uid="uid://rgx6ptl20pog" path="res://music/Lobo Loco - Organ come to Late (ID 2125).mp3" id="3_mae5d"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hy44")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.407843, 0.407843, 0.407843, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.972549, 0.984314, 0.945098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("1_ouk20")
theme_override_font_sizes/font_size = 100
text = "EnchantChess"

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 258.0
offset_top = 7.0
offset_right = 408.0
offset_bottom = 167.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_mae5d")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -26.25
offset_right = 104.0
offset_bottom = 74.75
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LaunchLAN" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play on LAN"
metadata/_edit_use_anchors_ = true

[node name="LaunchLocal" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Launch in Local"

[node name="LaunchBot" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play against Bot
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mae5d")
autoplay = true

[connection signal="pressed" from="ColorRect/VBoxContainer/LaunchLAN" to="." method="_on_launch_lan_pressed"]
[connection signal="gui_input" from="ColorRect/VBoxContainer/LaunchLocal" to="." method="_on_launch_local_gui_input"]
[connection signal="pressed" from="ColorRect/VBoxContainer/LaunchLocal" to="." method="_on_launch_local_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/LaunchBot" to="." method="_on_launch_bot_pressed"]
